# lege_maduo_PC

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  create_3d_dialog.cpp  create_3d_dialog.h  create_3d_dialog.ui  goods.cpp  goods.h  goods.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  myGraphicsView.cpp  mygraphicrectitem.cpp  mygraphicrectitem.h  newgraphicsview.cpp  newgraphicsview.h  offline_show_dialog.cpp  offline_show_dialog.h  offline_show_dialog.ui  plc_com.cpp  plc_com.h  readme.txt  select_func_dialog.cpp  select_func_dialog.h  select_func_dialog.ui  set_db_dialog.cpp  set_db_dialog.h  set_db_dialog.ui  set_ip_dialog.cpp  set_ip_dialog.h  set_ip_dialog.ui  single_SKU.cpp  single_SKU.h  sqlController.cpp  sqlController.h  sql_box_edit_dialog.cpp  sql_box_edit_dialog.h  (+20 more)
